--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "@vonage/server-sdk": "^3.19.2",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.7"
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.7",
+    "twilio": "^5.3.7"
   },
   "devDependencies": {
     "prisma": "^6.0.1"
