--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dialog": "^9.3.0",
+    "react-native-flags": "^1.0.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^7.2.3",
@@ -52,6 +53,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-sweet-alert": "^3.5.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
