--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -22,12 +22,15 @@
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
+    "agora-rn-uikit": "^5.0.2",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "cloudinary-react": "^1.8.1",
     "cross-spawn": "^7.0.6",
     "expo": "~52.0.18",
     "expo-auth-session": "~6.0.1",
+    "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -50,6 +53,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-agora": "^4.5.0",
     "react-native-dialog": "^9.3.0",
     "react-native-flags": "^1.0.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -65,6 +69,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "setprototypeof": "^1.2.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.15.0"
   },
   "devDependencies": {
