--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "@vonage/server-sdk": "^3.19.2",
+    "agora-access-token": "^2.0.4",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -23,6 +24,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "socket.io": "^4.8.1",
     "twilio": "^5.3.7"
   },
   "devDependencies": {
