--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@prisma/client": "^6.0.1",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.13",
@@ -41,6 +41,7 @@
     "expo-web-browser": "~14.0.1",
     "jsonwebtoken": "^9.0.2",
     "mime": "^4.0.4",
+    "nodemailer": "^6.9.16",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
