--- a/client/package.json
+++ b/client/package.json
@@ -67,7 +67,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "setprototypeof": "^1.2.0",
-    "sweetalert2": "^11.15.0"
+    "sweetalert2": "^11.15.0",
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
