--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@prisma/client": "^6.0.1",
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-firebase/auth": "^21.6.1",
-    "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-native-picker/picker": "^2.10.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "agora-rn-uikit": "^5.0.2",
     "axios": "^1.7.9",
@@ -50,6 +48,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mime": "^4.0.4",
+    "nodemailer": "^6.9.16",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
