--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.20.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
