--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "^16.0.3",
@@ -39,6 +40,7 @@
     "expo-modules-core": "~2.1.1",
     "expo-random": "^14.0.1",
     "expo-router": "~4.0.11",
+    "expo-sharing": "~13.0.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -58,6 +60,7 @@
     "react-native-dialog": "^9.3.0",
     "react-native-flags": "^1.0.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
