--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "buffer": "^6.0.3",
     "cloudinary-react": "^1.8.1",
     "cross-spawn": "^7.0.6",
+    "email-templates": "^12.0.1",
     "expo": "~52.0.20",
     "expo-auth-session": "~6.0.1",
     "expo-av": "^15.0.1",
@@ -51,6 +52,7 @@
     "jwt-decode": "^4.0.0",
     "mime": "^4.0.4",
     "nodemailer": "^6.9.16",
+    "nodemailer-express-handlebars": "^7.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
