--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,10 @@
     "cross-spawn": "^7.0.6",
     "expo": "~52.0.18",
     "expo-auth-session": "~6.0.1",
-    "expo-av": "^15.0.1",
+    "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-file-system": "^18.0.6",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "^16.0.3",
