--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@prisma/client": "^6.0.1",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/slider": "4.5.5",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@stripe/stripe-react-native": "0.38.6",
@@ -71,7 +73,7 @@
     "react-native-sweet-alert": "^3.5.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "^13.12.5",
     "setprototypeof": "^1.2.0",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.15.0"
