--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_API_URL=http://192.168.1.15:5000
-SERVER_URL=http://192.168.1.15:5000
+EXPO_PUBLIC_API_URL=http://192.168.1.13:5000
+SERVER_URL=http://192.168.1.13:5000
+RNE_THEME=default
