--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,9 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@stripe/stripe-react-native": "^0.35.0",
     "agora-rn-uikit": "^5.0.2",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
@@ -37,6 +40,7 @@
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-modules-core": "~2.1.1",
+    "expo-notifications": "~0.29.11",
     "expo-random": "^14.0.1",
     "expo-router": "~4.0.11",
     "expo-splash-screen": "~0.29.18",
@@ -53,18 +57,22 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-agora": "^4.5.0",
+    "react-native-animatable": "^1.4.0",
+    "react-native-calendars": "^1.1307.0",
     "react-native-dialog": "^9.3.0",
     "react-native-flags": "^1.0.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.20.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "setprototypeof": "^1.2.0",
