--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios": "expo install expo-linear-gradient",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -38,7 +38,7 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "^16.0.3",
-    "expo-linear-gradient": "^14.0.1",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-modules-core": "~2.1.1",
     "expo-random": "^14.0.1",
